manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: workshop
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: myapp
